style(sidebar, footer): Fix sidebar links to stay visible when scrolled down, increase padding between contact-details and footer logo img
services-projects.css
- Change .project-sidebar, .services-sidebar (aside) padding -> 0.
- Move position and top rules from .services-sidebar, .projects-sidebar (aside) -> .services-sidebar, .projects-sidebar nav; so sidebar links stay visible when scrolled to the bottom

main.js
- Add function that sets the navbar height (--nav-h) to calculate .services-sidebar, .projects-sidebar nav top.

style.css
- Increase footer .contact-details bottom padding to 2 rem

--- a/assets/assets/css/services-projects.css
+++ b/assets/assets/css/services-projects.css
@@ -24,16 +24,18 @@
 /*---------- SIDEBAR ----------*/
 .services-sidebar,
 .projects-sidebar {
-    position        : sticky;
     background-color: var(--sidebar-bg);
-    top             : calc(var(--nav-h, 60px) + 1.5rem);
-    padding         : 0rem 0 100vh 0rem;
+    padding         : 0;
     border-right    : 1px solid var(--rule-dark);
-    align-self      : start;
+    align-self      : stretch;
+    /* height          : 100%; */
 }
 
 .services-sidebar nav,
 .projects-sidebar nav {
+    position        : sticky;
+    position        : -webkit-sticky;
+    top             : calc(var(--nav-h, 60px) + 0rem);
     background-color: transparent;
     border          : none;
     display         : flex;
