--- a/assets/assets/css/style.css
+++ b/assets/assets/css/style.css
@@ -1106,11 +1106,15 @@ footer {
     text-align  : center;
     font-size   : 0.8rem;
 }
-footer .footer-logo img { height: 1rem; width: auto; }
+footer .footer-logo img { 
+    height: 1rem; 
+    width: auto; 
+}
 footer p { color: var(--footer-text) } /* overrides the rule applied specifically to <p> in line 44 */
 footer .contact-details {
     gap     : 1rem;
-    padding : 0;
+    padding : 0 0 2rem 0;
+
 }
 
 
